Fix email form but and re-align dropdown menu

--- a/public/main.css
+++ b/public/main.css
@@ -96,7 +96,8 @@
 }
 
 #dropdown {
-  margin-left: 1.8em;
+  margin-left: 2.1em;
+  width: 47%;
 }
 
 #dropdownButton {
